crates/viewpoint-js/tests/ui/invalid_reserved_word.stderr
error: Invalid JavaScript syntax: line 1, col 5: Error { error: (5..10, ExpectedSemiForExprStmt { expr: 1..4 }) }
 --> tests/ui/invalid_reserved_word.rs:5:17
  |
5 |     let _code = js! { let class = 1 };
  |                 ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `js` (in Nightly builds, run with -Z macro-backtrace for more info)
